Fix category z-index

--- a/app/components/modules/Shop/Category/Category.module.scss
+++ b/app/components/modules/Shop/Category/Category.module.scss
@@ -7,6 +7,7 @@
     position: absolute;
     top: 70px;
     left: 20px;
+    z-index: 10000;
   }
 
   .categoryBtn {
